Se agregaron el archivo stack y frame, para incluir pilas dentro del arbol y ocuparlos para guardar los datos del algoritmo de preOrden, inOrden y postOrden

--- a/Arbol Binario/Arbol Binario.vcxproj
+++ b/Arbol Binario/Arbol Binario.vcxproj
@@ -147,11 +147,14 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Arbol Binario.cpp" />
+    <ClCompile Include="main.cpp" />
+    <ClCompile Include="stack.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Arbol.h" />
+    <ClInclude Include="frame.h" />
     <ClInclude Include="Nodo.h" />
+    <ClInclude Include="stack.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
